--- a/portal/templates/gil/portal.html
+++ b/portal/templates/gil/portal.html
@@ -1,20 +1,20 @@
 {%- from "gil/macros.html" import footerHTML -%}
 {%- extends "gil/base.html" -%}
-{% block title %}Truenth Dashboard{% endblock %}
+{% block title %}{{_("Truenth Dashboard")}}{% endblock %}
 {% block head %}{{super()}}{% endblock %}
 {% block main %}
 {{ super() }}
 <main id="portalMain" class="main home--container">
 
     <section class="page-intro page-intro--dark home--header">
-        <h3 class="page-intro__main">Welcome to your TrueNTH Dashboard{% if user.first_name %}, {{user.first_name}}{% endif %}</h3>
+        <h3 class="page-intro__main">{{_("Welcome to your TrueNTH Dashboard")}}{% if user.first_name %}, {{user.first_name}}{% endif %}</h3>
         <br/>
         {% if user.has_role(ROLE.PARTNER) %}
-            <p class="page-intro__sub">More tools for you will be available as TrueNTH develops.</p>
-            <p class="page-intro__sub">For now, learn more about TrueNTH:</p>
+            <p class="page-intro__sub">{{_("More tools for you will be available as TrueNTH develops.")}}</p>
+            <p class="page-intro__sub">{{_("For now, learn more about TrueNTH:")}}</p>
         {% else %}
-            <p class="page-intro__sub">Below are the TrueNTH tools available to you.</p>
-            <p class="page-intro__sub">More will become available as TrueNTH evolves.</p>
+            <p class="page-intro__sub">{{_("Below are the TrueNTH tools available to you.")}}</p>
+            <p class="page-intro__sub">{{_("More will become available as TrueNTH evolves.")}}</p>
         {% endif %}
         <div class="button-callout">
             <figure id="portalScrollArrow"></figure>
@@ -26,10 +26,10 @@
         {% if user.has_role(ROLE.PARTNER) %}
             <div class="icon-box-group link-container">
                 <div class="link-box">
-                  <h4><a href="{{PORTAL}}/about">About TrueNTH</a></h4>
+                  <h4><a href="{{PORTAL}}/about">{{_("About TrueNTH")}}</a></h4>
                 </div>
                 <div class="link-box">
-                  <h4><a href="{{PORTAL}}/what-is-prostate-cancer">About Prostate Cancer</a></h4>
+                  <h4><a href="{{PORTAL}}/what-is-prostate-cancer">{{_("About Prostate Cancer")}}</a></h4>
                 </div>
             </div>
         {% endif %}
